--- a/src/assets/css/black-dashboard-react.css
+++ b/src/assets/css/black-dashboard-react.css
@@ -468,7 +468,7 @@ pre {
 
 .container {
   width: 100%;
-  padding-right: 15px;
+  padding-right: 1px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto; }
@@ -487,8 +487,8 @@ pre {
 
 .container-fluid {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 1px;
+  padding-left: 1px;
   margin-right: auto;
   margin-left: auto; }
 
@@ -496,7 +496,7 @@ pre {
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
-  margin-left: -15px; }
+ }
 
 .no-gutters {
   margin-right: 0;
@@ -515,8 +515,8 @@ pre {
   position: relative;
   width: 100%;
   min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px; }
+  padding-right: 1px;
+  }
 
 .col {
   flex-basis: 0;
@@ -4709,7 +4709,7 @@ button.bg-success:focus {
 a.bg-info:hover, a.bg-info:focus,
 button.bg-info:hover,
 button.bg-info:focus {
-  background-color: #0772db !important; }
+  background-color: #21cc11 !important; }
 
 .bg-warning {
   background-color: #ff8d72 !important; }
@@ -9618,8 +9618,8 @@ img {
 
 @media screen and (max-width: 991px) {
   .navbar .container-fluid {
-    padding-right: 15px;
-    padding-left: 15px; }
+    padding-right: 1px;
+    padding-left: 1px; }
   .navbar .navbar-collapse .input-group {
     margin: 0;
     margin-top: 5px; }
@@ -11165,7 +11165,7 @@ hr {
 @media screen and (max-width: 768px) {
   .main-panel .content {
     padding-left: 15px;
-    padding-right: 15px; } }
+    padding-right: 1px; } }
 
 /* Animations */
 .nav-pills .nav-link,
@@ -11479,7 +11479,7 @@ code {
     right: 260px;
     left: auto; }
   .rtl .footer {
-    padding-right: 15px; } }
+    padding-right: 1px; } }
 
 .rtl .navbar .navbar-nav {
   padding-right: 0; }
@@ -11535,7 +11535,7 @@ code {
 @media screen and (max-width: 768px) {
   .rtl .main-panel .content {
     padding-left: 15px;
-    padding-right: 15px; } }
+    padding-right: 1px; } }
 
 .form-group.has-danger .error,
 .input-group.has-danger .error {
@@ -11547,7 +11547,7 @@ code {
 
 .form-group.no-border.form-control-lg .input-group-append .input-group-text,
 .input-group.no-border.form-control-lg .input-group-append .input-group-text {
-  padding: 15px 0 15px 19px; }
+  padding: 1px 0 1px 19px; }
 
 .form-group.no-border.form-control-lg .form-control,
 .input-group.no-border.form-control-lg .form-control {
@@ -12201,7 +12201,7 @@ textarea.form-control {
   .card .card-title {
     margin-bottom: .75rem; }
   .card .card-body {
-    padding: 15px; }
+    padding: 1px; }
     .card .card-body.table-full-width {
       padding-left: 0;
       padding-right: 0; }
@@ -12213,7 +12213,7 @@ textarea.form-control {
     .card .card-body .card-description, .card .card-body .card-category {
       color: rgba(255, 255, 255, 0.6); }
   .card .card-header {
-    padding: 15px 15px 0;
+    padding: 1px 1px 0;
     border: 0;
     color: rgba(255, 255, 255, 0.8); }
     .card .card-header:not([data-background-color]) {
@@ -12349,7 +12349,7 @@ textarea.form-control {
   .card .card-footer {
     background-color: transparent;
     border: 0;
-    padding: 15px; }
+    padding: 1px; }
     .card .card-footer .stats i {
       margin-right: 5px;
       position: relative; }
@@ -12400,7 +12400,7 @@ textarea.form-control {
     .card-chart .dropdown .btn {
       margin: 0; }
   .card-chart.card-chart-pie .chart-area {
-    padding: 10px 0 25px;
+    padding: 1px 0 1px;
     height: auto; }
   .card-chart.card-chart-pie .card-title {
     margin-bottom: 10px; }
