--- a/src/assets/scss/black-dashboard-react/custom/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/black-dashboard-react/custom/_sidebar-and-main-panel.scss
@@ -15,6 +15,42 @@
   }
 }
 
+
+.themes {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.themes label {
+  background: #cbcbcb;
+  border-radius: 40px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  display: block;
+  height: 20px;
+  margin: 0 10px;
+  outline: 0;
+  padding: 2px;
+  position: relative;
+  transition: all 0.4s ease;
+  user-select: none;
+  width: 40px;
+}
+.themes label:after {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+  background: #fbfbfb;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 20px;
+  left: 2px;
+  position: absolute;
+  top: 1px;
+  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  width: 20px;
+}
+
 .sidebar-wrapper ul li div.collapse ul li div.collapse ul li a,
 .sidebar-wrapper ul li div.collapse ul li div.collapsing ul li a,
 .sidebar-wrapper ul li div.collapsing ul li div.collapse ul li a{
@@ -35,7 +71,10 @@
   //@include linear-gradient($primary-states, $primary);
   height: calc(100vh - 90px);
   z-index: 1;
-  width: 90%;
+  width: 80%;
+  background-color: #0c26465d;
+  border-radius: 5px;
+  padding: 0.7em;
   background-size: cover;
   background-position: center center;
   display: block;
@@ -451,7 +490,7 @@
   @include transitions (0.50s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
   > .content {
-    padding: 80px 1% 0px 2%;
+    padding: 2px 1% 0px 2%;
     min-height: calc(100vh - 70px);
     width: 80%;
   }
@@ -734,7 +773,7 @@
 
   .main-panel .content {
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 1px;
   }
   .main-panel{
     width: 100%;
