--- a/src/assets/scss/black-dashboard-react/custom/_variables.scss
+++ b/src/assets/scss/black-dashboard-react/custom/_variables.scss
@@ -21,11 +21,11 @@ $gray-500: #adb5bd !default;
 $gray-600: #6c757d !default;   // Line footer color
 $gray-700: #525f7f !default;   // Line p color
 $gray-800: #32325d !default;   // Line heading color
-$gray-900: #212529 !default;
+$gray-900: #000000 !default;
 $link-disabled:              #666666 !default;
 $transparent-bg:             transparent !default;
 $light-bg:                   #f5f6fa !default;
-$dark-background:            #555555 !default;
+$dark-background:            #000 !default;
 
 
 $grays: () !default;
@@ -115,8 +115,8 @@ $warning-states:       #ff6491 !default;
 $danger-states:        #ec250d !default;
 $black-states:         #1d253b !default;
 
-$background-black:           #1e1e2f !default;
-$background-states-black:    #1e1e24 !default;
+$background-black:           #000000 !default;
+$background-states-black:    #000000 !default;
 
 // opacity
 $default-opacity:      rgba(182, 182, 182, .6) !default;
@@ -895,7 +895,7 @@ $card-border-color:                 rgba($black, .05);
 $card-inner-border-radius:          calc(#{$card-border-radius} - #{$card-border-width});
 $card-cap-bg:                       $gray-100 !default;
 $card-bg:                           $white !default;
-$card-black-background:             #27293d !default;
+$card-black-background:             #000000 !default;
 $card-img-overlay-padding:          1.25rem !default;
 
 //$card-group-margin:                 ($grid-gutter-width / 2);
