--- a/src/assets/scss/black-dashboard-react/custom/mixins/_buttons.scss
+++ b/src/assets/scss/black-dashboard-react/custom/mixins/_buttons.scss
@@ -1,6 +1,6 @@
 @mixin btn-styles($btn-color, $btn-states-color) {
   @include diagonal-gradient($btn-color, $btn-states-color);
-    background-color: $btn-color;
+    background-color: green;
     transition: all 0.15s ease;
     box-shadow: none;
     &.animation-on-hover:hover{
@@ -18,10 +18,10 @@
     &.active:hover
      {
         background-color: $btn-states-color !important;
-        background-image: linear-gradient(to bottom left, $btn-color, $btn-states-color, $btn-color) !important;
-        background-image: -webkit-linear-gradient(to bottom left, $btn-color, $btn-states-color, $btn-color) !important;
-        background-image: -o-linear-gradient(to bottom left, $btn-color, $btn-states-color, $btn-color) !important;
-        background-image: -moz-linear-gradient(to bottom left, $btn-color, $btn-states-color, $btn-color) !important;
+        background-image: linear-gradient(to bottom left, $green, $green, $green) !important;
+        background-image: -webkit-linear-gradient(to bottom left, $green, $green, $green) !important;
+        background-image: -o-linear-gradient(to bottom left, $green, $green, $green) !important;
+        background-image: -moz-linear-gradient(to bottom left, $green, $green, $green) !important;
         color: $white;
         box-shadow: none;
     }
@@ -50,7 +50,7 @@
         &:active,
         &.active {
             background-color: $btn-color;
-            border-color: $btn-color;
+            border-color: $green;
         }
     }
 
@@ -142,34 +142,30 @@
     }
 
     &.btn-simple{
-        color: $btn-color;
-        border-color: $btn-color;
+        color: $green;
+        border-color: $green;
         background: $transparent-bg;
 
         &:hover,
         &:focus,
         &:active,
         &:not(:disabled):not(.disabled):active{
-            color: $btn-color;
-            border-color: $btn-color;
+            color: $green;
+            border-color: $green;
             background-color: $transparent-bg !important;
             background-image: none !important;
             box-shadow: none;
         }
 
         &.active{
-          border-color: $btn-color !important;
+          border-color: $green !important;
           &:hover,
           &:focus,
           &:active,
           &:not(:disabled):not(.disabled):active{
               color: $white;
               border-color: $btn-color;
-              background-image: linear-gradient(to bottom left, $btn-color, $btn-states-color, $btn-color) !important;
-              background-image: -webkit-linear-gradient(to bottom left, $btn-color, $btn-states-color, $btn-color) !important;
-              background-image: -o-linear-gradient(to bottom left, $btn-color, $btn-states-color, $btn-color) !important;
-              background-image: -moz-linear-gradient(to bottom left, $btn-color, $btn-states-color, $btn-color) !important;
-              background-color: $btn-states-color !important;
+              background-color: $green !important;
               box-shadow: none;
           }
         }
@@ -180,7 +176,7 @@
         &:hover,
         &:focus,
         &:active{
-            background-color: $transparent-bg !important;
+            background-color: $green !important;
             background-image: none !important;
             color: $white !important;
             text-decoration: none;
