feat: icons, spacing fixed, latest requests

--- a/src/assets/scss/black-dashboard-react.scss
+++ b/src/assets/scss/black-dashboard-react.scss
@@ -17,7 +17,6 @@
  */
 
  // Core
-
 @import "black-dashboard-react/custom/functions";
 @import "black-dashboard-react/bootstrap/functions";
 
@@ -81,6 +80,8 @@
  @import "black-dashboard-react/custom/misc.scss";
  @import "black-dashboard-react/custom/rtl.scss";
  @import "black-dashboard-react/custom/input-group.scss";
+ @import "black-dashboard-react/custom/404.scss";
+
 
 
  // Vendor / Plugins
