--- a/src/assets/scss/black-dashboard-react/custom/cards/_card-chart.scss
+++ b/src/assets/scss/black-dashboard-react/custom/cards/_card-chart.scss
@@ -2,8 +2,9 @@
   overflow: hidden;
   .card-header{
     .card-title{
-      font-size: 1.34em;
+      font-size: 1.2em;
       font-weight: bold;
+      color: #ffffffaf;
       i{
         font-size: 16px;
         margin-right: 5px;
