--- a/src/assets/scss/black-dashboard-react/custom/_card.scss
+++ b/src/assets/scss/black-dashboard-react/custom/_card.scss
@@ -26,7 +26,7 @@
       .card-title{
         color: $white;
         text-transform: inherit;
-        font-size: $font-size-lg;
+        font-size: $font-size-sm;
         margin-bottom: .75rem;
       }
 
@@ -40,13 +40,13 @@
       &:not([data-background-color]){
         background-color: transparent;
       }
-      padding: 1px 1px 0;
+      padding: 15px 15px 0;
       border: 0;
       color: rgba($white,0.8);
 
       .card-title{
           color: $white;
-          font-size: $font-size-lg;
+          font-size: $font-size-sm;
       }
 
       .card-category{
