--- a/src/components/Toggle/Toggle.css
+++ b/src/components/Toggle/Toggle.css
@@ -7,6 +7,7 @@
   background-color: transparent;
   border: 0;
   padding: 0;
+  margin-top: 0.5em;
 
   -webkit-touch-callout: none;
   user-select: none;
